openpearl-code/testsuite/must_not_compile/01_typeFixed/002_length_fixed_missing.expect
002_length_fixed_missing.prl:4:14: ERROR : Syntax error :missing IntegerConstant at ')'
LENGTH FIXED ();
              ^
