openpearl-code/testsuite/must_not_compile/01_typeFixed/002_length_fixed_missing.prl
MODULE(m1);

PROBLEM;
LENGTH FIXED ();

MODEND;

